--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="./app.js" defer></script>
   </head>
   <body>
-    <h1>Welcome to Norfolk!</h1>
+    <div id="thumbnails">
+      <img id="first" src="./pics/bay.jpg" />
+      <img id="second" src="./pics/hill.jpg" />
+      <img id="third" src="./pics/tunnel.jpg" />
+    </div>
+    <img class="large-image" id="largeimage" src="./pics/bay.jpg" />
+    <div class="button_container">
+      <button type="button" class="button-feature" id="previous-button">
+        Prev
+      </button>
+      <button type="button" class="button-feature" id="next-button">
+        Next
+      </button>
+    </div>
   </body>
 </html>
